- update version default size - update index map size - update gc collector